k8s/safework/endpoint-direct.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: safework-direct
  namespace: safework
subsets:
- addresses:
  - ip: 192.168.50.100
  ports:
  - port: 3001
    name: http
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: safework-direct
  namespace: safework
spec:
  ports:
  - port: 3001
    targetPort: 3001
    protocol: TCP
    name: http
  type: ClusterIP
