k8s/safework/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: safework-nodeport
  namespace: safework
  labels:
    app: safework
    component: nodeport
spec:
  type: NodePort
  ports:
  - port: 3001
    targetPort: 3001
    nodePort: 32301
    protocol: TCP
    name: http
  selector:
    app: safework
