k8s/safework/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: safework-external
  namespace: safework
  labels:
    app: safework
spec:
  type: NodePort
  ports:
  - port: 3001
    targetPort: 3001
    nodePort: 30301
    protocol: TCP
    name: http
  externalIPs:
  - 192.168.50.100  # 호스트 IP로 직접 접근
