k8s/safework/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: safework
  namespace: safework
  labels:
    app: safework
spec:
  type: NodePort
  ports:
  - port: 3001
    targetPort: 3001
    nodePort: 31301
    protocol: TCP
    name: http
  selector:
    app: safework
